# https://peps.python.org/pep-0621/
[project]
name = "flet-secure-storage"
version = "0.1.0"
description = "A Flet extension based on flutter_secure_storage."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "td3447", email = "td3447@proton.me" }]
keywords = ["flet", "secure", "storage"]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["flet[all]>=0.70.0.dev0"]

[project.urls]
homepage = "https://github.com/td3447/flet-secure-storage"
documentation = "https://td3447.github.io/flet-secure-storage/"
repository = "https://github.com/td3447/flet-secure-storage"
issues = "https://github.com/td3447/flet-secure-storage/issues"
changelog = "https://github.com/td3447/flet-secure-storage/blob/main/CHANGELOG.md"

[tool.setuptools.package-data]
"flutter.flet_secure_storage" = ["**/*"]

[tool.uv]
dev-dependencies = [
    "flet[all]>=0.70.0.dev0",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
