# https://peps.python.org/pep-0621/
[project]
name = "flet-secure-storage"
version = "0.2.0"
description = "A Flet extension based on flutter_secure_storage."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "td3447", email = "td3447@proton.me" }]
keywords = ["flet", "secure", "storage"]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]
dependencies = ["flet>=0.80.0"]

[project.urls]
Homepage = "https://github.com/td3447/flet-secure-storage"
Documentation = "https://td3447.github.io/flet-secure-storage/"
Repository = "https://github.com/td3447/flet-secure-storage"
Issues = "https://github.com/td3447/flet-secure-storage/issues"
Changelog = "https://github.com/td3447/flet-secure-storage/blob/main/CHANGELOG.md"

[tool.setuptools.package-data]
"flutter.flet_secure_storage" = ["**/*"]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "build>=1.3.0",
    "isort>=7.0.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "twine>=6.2.0",
]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
