[project]
name = "flet-secure-storage-example"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Flet developer", email = "you@example.com" }]
dependencies = [
    # $env:PROJECT_ROOT = ($PWD.Path -replace '\\','/')  # Temporary Environment variable for Windows PowerShell
    # setx PROJECT_ROOT "$($PWD.Path)"                   # Permanent Environment variable for Windows PowerShell
    "flet-secure-storage @ file:///${PROJECT_ROOT}/../..", # for Windows
    # "flet-secure-storage @ file:///C:/path/to/flet-secure-storage", # Alternative Windows path
    # "flet-secure-storage @ file:///${PWD}/../..", # Linux
    # "flet-secure-storage @ file:///home/user/path/to/flet-secure-storage", # Alternative Linux path
    "flet>=0.80.0",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "flet-secure-storage-example"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by MyCompany"

[tool.flet.app]
path = "src"

[tool.flet.dev_packages]
flet-secure-storage = "../.."

[dependency-groups]
dev = ["flet[all]>=0.80.0"]

[tool.uv.sources]
flet-secure-storage = { path = "../..", editable = true }
